--- a/search.job/build.gradle
+++ b/search.job/build.gradle
@@ -25,7 +25,8 @@ apply plugin: 'io.spring.dependency-management'
 sourceCompatibility = 1.8
 
 repositories {
-    mavenLocal()
+    jcenter()
+//    mavenLocal()
     mavenCentral()
     maven {
         url "https://repo.spring.io/libs-milestone/"
@@ -36,26 +37,33 @@ repositories {
 }
 
 dependencies {
-    compile("org.springframework.boot:spring-boot-starter-web")
+    compile "org.springframework.boot:spring-boot-starter:${springBootVersion}"
+    compile("org.springframework.boot:spring-boot-starter-web:${springBootVersion}")
+    compile("org.springframework.boot:spring-boot-starter-data-rest:${springBootVersion}")
 
-    compile "org.apache.kafka:kafka_2.10:0.8.1.1"
-    compile "org.springframework.boot:spring-boot-starter-integration"
-    compile "org.springframework.boot:spring-boot-starter"
-    compile "org.springframework.integration:spring-integration-kafka"
-    compile "org.springframework.integration:spring-integration-java-dsl"
-    compile group: 'javax.jms', name: 'jms', version: '1.1'
+//    compile 'org.springframework.hateoas:spring-hateoas:0.23.0.RELEASE'
+//    compile 'org.springframework.hateoas:spring-hateoas:0.23.0.RELEASE'
+//    compile 'org.springframework.plugin:spring-plugin-core:0.8.0.RELEASE'
+//    compile "org.springframework.data:spring-data-rest-hal-browser"
 
     compile("org.springframework.data:spring-data-elasticsearch:3.0.2.RELEASE") {
-           exclude group: 'org.elasticsearch.client', module: 'transport'
+        exclude group: 'org.elasticsearch.client', module: 'transport'
     }
-    compile 'org.elasticsearch.client:transport:5.5.0';
+//    compile 'org.elasticsearch.client:transport:5.5.0';
+    compile 'org.elasticsearch.client:x-pack-transport:5.5.0';
 
+//    KAFKA
+//    compile 'org.springframework.kafka:spring-kafka'
+
+    //Commons
     compile group: 'com.google.guava', name: 'guava', version: '23.5-jre'
     compile group: 'javax.money', name: 'money-api', version: '1.0.1'
 
     compile 'org.projectlombok:lombok:1.16.18'
 
+
     testCompile group: 'junit', name: 'junit', version: '4.12'
     testCompile group: 'org.mockito', name: 'mockito-core', version: '2.12.0'
+    testCompile('org.springframework.boot:spring-boot-starter-test')
 
 }
