--- a/search.job/build.gradle
+++ b/search.job/build.gradle
@@ -2,6 +2,7 @@ buildscript {
     ext {
         springBootVersion = "2.0.0.M6"
     }
+
     repositories {
         mavenCentral()
         maven {
@@ -24,6 +25,10 @@ apply plugin: 'io.spring.dependency-management'
 
 sourceCompatibility = 1.8
 
+ext {
+    axonVersion = "3.1.1"
+}
+
 repositories {
     jcenter()
 //    mavenLocal()
@@ -40,6 +45,10 @@ dependencies {
     compile "org.springframework.boot:spring-boot-starter:${springBootVersion}"
     compile("org.springframework.boot:spring-boot-starter-web:${springBootVersion}")
     compile("org.springframework.boot:spring-boot-starter-data-rest:${springBootVersion}")
+
+//    compile("org.axonframework:axon:${axonVersion}")
+    compile group: 'org.axonframework', name: 'axon-core', version: '3.1.1'
+
 
 //    compile 'org.springframework.hateoas:spring-hateoas:0.23.0.RELEASE'
 //    compile 'org.springframework.hateoas:spring-hateoas:0.23.0.RELEASE'
@@ -60,7 +69,6 @@ dependencies {
     compile group: 'javax.money', name: 'money-api', version: '1.0.1'
 
     compile 'org.projectlombok:lombok:1.16.18'
-
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
     testCompile group: 'org.mockito', name: 'mockito-core', version: '2.12.0'
